# file-analyzer-service

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: download.py  files.py  pages.py  stats.py
app/core/: celery_app.py  config.py  redis.py
app/db/: __init__.py  dependencies.py  models.py  session.py
app/exceptions/: downloaded_file.py  stats.py
app/models/: __init__.py  downloaded_file.py
app/schemas/: download.py  download_progress.py  downloaded_file.py  files.py  stats.py
app/services/: catalog_downloader.py  download_progress.py  downloaded_file.py  file_storage.py  source_api_client.py  stats_calculator.py
app/static/css/: style.css
app/static/js/: download.js  files.js
app/tasks/: download_tasks.py
app/templates/: base.html  download.html  files.html
migrations/: env.py
migrations/versions/: 04d0ffd13dd3_add_downloaded_files_table.py  5cde3173142e_add_downloaded_files_table.py  db234fef14f8_add_path_column_to_downloaded_files.py
nginx/: nginx.conf
tests/api/: test_download.py  test_files.py  test_stats.py
tests/services/: test_catalog_downloader.py  test_download_progress.py  test_source_api_client.py  test_source_api_client_download.py  test_source_api_client_mark_files_downloaded.py  test_stats_calculator.py
tests/tasks/: test_download_tasks.py
