[project]
name = "file-analyzer-service"
version = "0.1.0"
description = "Downloads a remote catalog of text files via a rate-limited API and computes digit-frequency statistics over their contents, with a minimal web UI."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "celery>=5.6.3",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "pytz>=2026.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
